--- a/test/cassettes/workspace_post.yml
+++ b/test/cassettes/workspace_post.yml
@@ -65,4 +65,133 @@ http_interactions:
         Random Channel!","user":"U01CD4VSXRP","ts":"1602115022.000100","team":"T01BKP66VQF","bot_profile":{"id":"B01BXD5J81K","deleted":false,"name":"Earth
         - Jasmine - API Project","updated":1601939850,"app_id":"A01BTPM845U","icons":{"image_36":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_36.png","image_48":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_48.png","image_72":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/service_72.png"},"team_id":"T01BKP66VQF"}}}'
   recorded_at: Wed, 07 Oct 2020 23:57:02 GMT
+- request:
+    method: post
+    uri: https://slack.com/api/chat.postMessage
+    body:
+      encoding: UTF-8
+      string: token=<SLACK_TOKEN>&text=Hello%2C%20Random%20Channel%21&channel=C01BKP67695&icon_emoji=%3Agrinning%3A&username=Earth%20-%20Jasmine%20-%20API%20Project
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 23:04:55 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - 8caec83aca74c3d63474cb9ed0636710
+      X-Oauth-Scopes:
+      - chat:write,channels:read,users:read,chat:write.customize
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Slack-Backend:
+      - r
+      X-Content-Type-Options:
+      - nosniff
+      Expires:
+      - Mon, 26 Jul 1997 05:00:00 GMT
+      Cache-Control:
+      - private, no-cache, no-store, must-revalidate
+      X-Xss-Protection:
+      - '0'
+      X-Accepted-Oauth-Scopes:
+      - chat:write
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      Pragma:
+      - no-cache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Referrer-Policy:
+      - no-referrer
+      Content-Length:
+      - '269'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-cyj4,haproxy-edge-pdx-rj19
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":true,"channel":"C01BKP67695","ts":"1602198295.002100","message":{"type":"message","subtype":"bot_message","text":"Hello,
+        Random Channel!","ts":"1602198295.002100","username":"Earth - Jasmine - API
+        Project","icons":{"emoji":":grinning:","image_64":"https:\/\/a.slack-edge.com\/80588\/img\/emoji_2017_12_06\/apple\/1f600.png"},"bot_id":"B01CQBDFDH6"}}'
+  recorded_at: Thu, 08 Oct 2020 23:04:55 GMT
+- request:
+    method: post
+    uri: https://slack.com/api/chat.postMessage
+    body:
+      encoding: UTF-8
+      string: token=<SLACK_TOKEN>&text=Hello%2C%20Random%20Channel%21&channel=C01BKP67695&icon_emoji=%3Akissing_heart%3A&username=murder_bot
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 23:06:30 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - 2f3f6e342f2eb56a3a9e4273e84213fb
+      X-Oauth-Scopes:
+      - chat:write,channels:read,users:read,chat:write.customize
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Slack-Backend:
+      - r
+      X-Content-Type-Options:
+      - nosniff
+      Expires:
+      - Mon, 26 Jul 1997 05:00:00 GMT
+      Cache-Control:
+      - private, no-cache, no-store, must-revalidate
+      X-Xss-Protection:
+      - '0'
+      X-Accepted-Oauth-Scopes:
+      - chat:write
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      Pragma:
+      - no-cache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Referrer-Policy:
+      - no-referrer
+      Content-Length:
+      - '256'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-h4fh,haproxy-edge-pdx-1g64
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":true,"channel":"C01BKP67695","ts":"1602198390.002200","message":{"type":"message","subtype":"bot_message","text":"Hello,
+        Random Channel!","ts":"1602198390.002200","username":"murder_bot","icons":{"emoji":":kissing_heart:","image_64":"https:\/\/a.slack-edge.com\/80588\/img\/emoji_2017_12_06\/apple\/1f618.png"},"bot_id":"B01CQBDFDH6"}}'
+  recorded_at: Thu, 08 Oct 2020 23:06:30 GMT
 recorded_with: VCR 6.0.0
